deploy/kubernetes/base/daemonset_resource.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: juicefs-csi-node
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: juicefs-plugin
          resources:
            limits:
              cpu: '1000m'
              memory: '1Gi'
            requests:
              cpu: '100m'
              memory: '512Mi'
