deploy/kubernetes/base/statefulset_resource.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: juicefs-csi-controller
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: juicefs-plugin
          resources:
            limits:
              cpu: '1000m'
              memory: '1Gi'
            requests:
              cpu: '100m'
              memory: '512Mi'
